# SRTLangDetect

./: .gitignore  README.md  pyproject.toml
src/: srtlangdetect.py
src/SRTLangDetect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
